bindings/c/pnf_c.hpp

/// \brief Opaque indicators handle.
    typedef struct PnfIndicators PnfIndicators;
/// \brief PnfSignal.
    typedef struct {
        PnfSignalType type;
        int column_index;
        double price;
    } PnfSignal;
/// \brief PnfPattern.
    typedef struct {
        PnfPatternType type;
        int start_column;
        int end_column;
        double price;
        bool is_bullish;
    } PnfPattern;
/// \brief PnfSupportResistanceLevel.
    typedef struct {
        double price;
        int touch_count;
        bool is_support;
    } PnfSupportResistanceLevel;
/// \brief PnfDoubleArray.
    typedef struct {
        double* data;
        size_t length;
    } PnfDoubleArray;
/// \brief PnfSignalArray.
    typedef struct {
        PnfSignal* data;
        size_t length;
    } PnfSignalArray;
/// \brief PnfPatternArray.
    typedef struct {
        PnfPattern* data;
        size_t length;
    } PnfPatternArray;
/// \brief PnfLevelArray.
    typedef struct {
        PnfSupportResistanceLevel* data;
        size_t length;
    } PnfLevelArray;
/// \brief Indicators resistance level count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_resistance_level_count(const PnfIndicators* ind);
/// \brief Indicators is near support.
    /// \param ind 
    /// \param price 
    /// \param tolerance 
    /// \return 
    PNF_API bool pnf_indicators_is_near_support(const PnfIndicators* ind, double price, double tolerance);
/// \brief Indicators is near resistance.
    /// \param ind 
    /// \param price 
    /// \param tolerance 
    /// \return 
    PNF_API bool pnf_indicators_is_near_resistance(const PnfIndicators* ind, double price, double tolerance);
/// \brief Indicators support levels.
    /// \param ind 
    /// \return 
    PNF_API PnfLevelArray pnf_indicators_support_levels(const PnfIndicators* ind);
/// \brief Indicators resistance levels.
    /// \param ind 
    /// \return 
    PNF_API PnfLevelArray pnf_indicators_resistance_levels(const PnfIndicators* ind);
/// \brief Indicators support prices.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_support_prices(const PnfIndicators* ind);
/// \brief Indicators resistance prices.
    /// \param ind 
    /// \return 
    PNF_API PnfDoubleArray pnf_indicators_resistance_prices(const PnfIndicators* ind);
    // Congestion detection
/// \brief Indicators is in congestion.
    /// \param ind 
    /// \param column 
    /// \return 
    PNF_API bool pnf_indicators_is_in_congestion(const PnfIndicators* ind, int column);
/// \brief Indicators congestion zone count.
    /// \param ind 
    /// \return 
    PNF_API size_t pnf_indicators_congestion_zone_count(const PnfIndicators* ind);
    // String output
/// \brief Indicators summary.
    /// \param ind 
    /// \return 
    PNF_API const char* pnf_indicators_summary(const PnfIndicators* ind);
/// \brief Indicators to string.
    /// \param ind 
    /// \return 
    PNF_API const char* pnf_indicators_to_string(const PnfIndicators* ind);
    // Memory management
/// \brief Free string.
    /// \param str 
    PNF_API void pnf_free_string(const char* str);
/// \brief Free double array.
    /// \param arr 
    PNF_API void pnf_free_double_array(PnfDoubleArray arr);
/// \brief Free signal array.
    /// \param arr 
    PNF_API void pnf_free_signal_array(PnfSignalArray arr);
/// \brief Free pattern array.
    /// \param arr 
    PNF_API void pnf_free_pattern_array(PnfPatternArray arr);
/// \brief Free level array.
    /// \param arr 
    PNF_API void pnf_free_level_array(PnfLevelArray arr);