bindings/csharp/NativeMethods.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_resistance_level_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_resistance_level_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_indicators_resistance_level_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_indicators_is_near_support API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_is_near_support API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="price"></param>
        /// <param name="tolerance"></param>
        /// <returns></returns>
        public static extern bool pnf_indicators_is_near_support(IntPtr indicators, double price, double tolerance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_indicators_is_near_resistance API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_is_near_resistance API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="price"></param>
        /// <param name="tolerance"></param>
        /// <returns></returns>
        public static extern bool pnf_indicators_is_near_resistance(IntPtr indicators, double price, double tolerance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_support_levels API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_support_levels API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfLevelArray pnf_indicators_support_levels(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_resistance_levels API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_resistance_levels API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfLevelArray pnf_indicators_resistance_levels(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_support_prices API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_support_prices API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_support_prices(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_resistance_prices API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_resistance_prices API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern PnfDoubleArray pnf_indicators_resistance_prices(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_indicators_is_in_congestion API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_is_in_congestion API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <param name="column"></param>
        /// <returns></returns>
        public static extern bool pnf_indicators_is_in_congestion(IntPtr indicators, int column);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_congestion_zone_count API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_congestion_zone_count API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_indicators_congestion_zone_count(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_summary API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_summary API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_indicators_summary(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicators_to_string API.
        /// </summary>
        /// <summary>
        /// pnf_indicators_to_string API.
        /// </summary>
        /// <param name="indicators"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_indicators_to_string(IntPtr indicators);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_free_string API.
        /// </summary>
        /// <summary>
        /// pnf_free_string API.
        /// </summary>
        /// <param name="str"></param>
        /// <returns></returns>
        public static extern void pnf_free_string(IntPtr str);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_free_double_array API.
        /// </summary>
        /// <summary>
        /// pnf_free_double_array API.
        /// </summary>
        /// <param name="arr"></param>
        /// <returns></returns>
        public static extern void pnf_free_double_array(PnfDoubleArray arr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_free_signal_array API.
        /// </summary>
        /// <summary>
        /// pnf_free_signal_array API.
        /// </summary>
        /// <param name="arr"></param>
        /// <returns></returns>
        public static extern void pnf_free_signal_array(PnfSignalArray arr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_free_pattern_array API.
        /// </summary>
        /// <summary>
        /// pnf_free_pattern_array API.
        /// </summary>
        /// <param name="arr"></param>
        /// <returns></returns>
        public static extern void pnf_free_pattern_array(PnfPatternArray arr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_free_level_array API.
        /// </summary>
        /// <summary>
        /// pnf_free_level_array API.
        /// </summary>
        /// <param name="arr"></param>
        /// <returns></returns>
        public static extern void pnf_free_level_array(PnfLevelArray arr);
    }
}
